fix alignment

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -180,11 +180,11 @@ input{
   max-width: 500px;
   width: 100%;
   line-height: 1.6;
-  margin-top: 30px;
+  margin: 30px auto;
 }
 
 #justMissed{
-  margin-top: 50px;
+  margin: 50px auto 30px;
   font-style: italic;
-  margin-bottom: 30px;
+  max-width: 700px;
 }
